# mancmancala

./: .gitignore  README.md  get_reward.py  setup.py  totalstones.txt
cppmancala/: CMakeLists.txt  GameState.cpp  GameState.h  board.cpp  cplusmancala  cppmancala  decision_engine.cpp  decision_engine.h  foo.cpp  foo.h  main.cpp  mcts_decision_engine.cpp  minimax_decision_engine.cpp  mtd_decision_engine.cpp  run_mancmancalag10  utils.cpp  utils.h  valgrind.sh
cppmancala/main_app/: CMakeLists.txt  main.cpp
cppmancala/src/: CMakeLists.txt  agent.cpp  agent.h  decision_engine.cpp  decision_engine.h  heuristic_params.h  mcts_decision_engine.cpp  minimax_decision_engine.cpp  mtd_decision_engine.cpp  opt_h.cpp  opt_h.h
cppmancala/tests/: CMakeLists.txt  test.cpp  test_de.cpp  test_minimax.cpp  test_utils.cpp
javamancala/: pom.xml
javamancala/src/: AB_Minimax.java  Agent.java  Board.java  CallLocation.java  DecisionEngine.java  MancalaBoard.java  MancalaMove.java  Move.java  Side.java
javamancala/tests/: AB_MinimaxTest.java  AgentTest.java  DecisionEngineTest.java
mancalapy/: __init__.py  agent.py  board.py  decision_engine.py  game.py  questions.txt  requirements.txt  setup.py  side.py
mancalapy/cymancala/: agent.py  cgame.pyx  cy.pyx  cyagent.c  cyagent.pyx  cygame.pyx  cymancala.py  cyside.pyx  profile.py  setup.py
mancalapy/decision_engines/: __init__.py  a3c_engine.py  decision_engine.py  decision_engine_factory.py  minimax_engines.py  monte_carlo.py
mancalapy/mancalapy/: .floydexpt  agent.py  util.py
mancalapy/tests/: agent_test.py  test_agent.py  (+3 more)
(+44 files in other folders)
